--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aframe": "^1.4.1",
+    "aframe-particle-system-component": "^1.1.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
