--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "host": "vite --host",
     "build": "vite build",
+    "deploy": "vite build && firebase deploy",
     "preview": "vite preview"
   },
   "dependencies": {
