--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "aframe": "^1.4.1",
     "aframe-particle-system-component": "^1.1.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "webxr-polyfill": "^2.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
