--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aframe": "^1.4.1",
     "aframe-particle-system-component": "^1.1.3",
+    "three": "^0.148.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "webxr-polyfill": "^2.0.3"
