--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aframe": "^1.4.1",
     "aframe-particle-system-component": "^1.1.3",
+    "mosha-vue-toastify": "^1.0.23",
     "three": "^0.148.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
