--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aframe": "^1.4.1",
     "aframe-particle-system-component": "^1.1.3",
     "babylonjs": "^5.44.0",
+    "babylonjs-gui": "^5.47.0",
     "mosha-vue-toastify": "^1.0.23",
     "three": "^0.148.0",
     "vue": "^3.2.45",
@@ -21,6 +22,7 @@
     "webxr-polyfill": "^2.0.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "vite": "^4.0.0"
